--- a/comment_templates/example/index.html
+++ b/comment_templates/example/index.html
@@ -48,6 +48,9 @@
       <div class="label">Date:
         <div id="date">{{date}}</div>
       </div>
+      <div class="label">Permalink:
+        <div id="permalink">{{permalink}}</div>
+      </div>
     </div>
   </body>
 </html>
