--- a/comment_templates/old_reddit_mockup/index.html
+++ b/comment_templates/old_reddit_mockup/index.html
@@ -397,7 +397,7 @@
         </form>
         <ul class="flat-list buttons">
           <li class="first">
-            <a href="https://old.reddit.com/r/subreddit/comments/post_id/post_slug/thingid/" data-event-action="permalink" class="bylink" rel="nofollow">permalink</a>
+            <a href="https://old.reddit.com{{permalink}}" data-event-action="permalink" class="bylink" rel="nofollow">permalink</a>
           </li>
           <li>
             <a href="javascript:void(0)" data-comment="/r/subreddit/comments/post_id/post_slug/thingid/" data-media="www.redditmedia.com" data-link="/r/subreddit/comments/post_id/post_slug/" data-root="true" data-title="Post title" class="embed-comment">embed</a>
