[template] dark/light: add rule for links color

--- a/comment_templates/dark_reddit_mockup/index.html
+++ b/comment_templates/dark_reddit_mockup/index.html
@@ -59,6 +59,10 @@
         text-decoration: none;
       }
       
+      comment a {
+        color: rgb(98, 159, 255);
+      }
+      
       comment {
         grid-row-start: 2;
         grid-column-start: 2;
