--- a/comment_templates/light_reddit_mockup/index.html
+++ b/comment_templates/light_reddit_mockup/index.html
@@ -59,6 +59,10 @@
         text-decoration: none;
       }
       
+      comment a {
+        color: rgb(0, 69, 172);
+      }
+      
       comment {
         grid-row-start: 2;
         grid-column-start: 2;
